--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -369,30 +369,30 @@ jobs:
       # - revert-migrations:
       #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
 
-  cloudfront-update:
-      docker:
-        - image: amazon/aws-cli
-      steps:
-        - checkout
-        - run:
-            name: clean old workflow
-            command: |
-              WorkflowID=$(aws --region us-east-1 cloudformation \
-              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-              --no-paginate --output text)
-              curl https://kvdb.io/FSEfNb8pmLiuvp867pkneM/values/workflowid  -d "$WorkflowID"
-        - run:
-            name: Update cloudfront 
-            command: |
-              aws cloudformation deploy \
-              --template-file .circleci/files/cloudfront.yml \
-              --tags project=circleci-${CIRCLE_WORKFLOW_ID:0:7} \
-              --stack-name InitialStack \
-              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
-        # - revert-migrations:
-        #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-        # - destroy-environment:
-        #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  # cloudfront-update:
+  #     docker:
+  #       - image: amazon/aws-cli
+  #     steps:
+  #       - checkout
+  #       - run:
+  #           name: clean old workflow
+  #           command: |
+  #             WorkflowID=$(aws --region us-east-1 cloudformation \
+  #             list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+  #             --no-paginate --output text)
+  #             curl https://kvdb.io/FSEfNb8pmLiuvp867pkneM/values/workflowid  -d "$WorkflowID"
+  #       - run:
+  #           name: Update cloudfront 
+  #           command: |
+  #             aws cloudformation deploy \
+  #             --template-file .circleci/files/cloudfront.yml \
+  #             --tags project=circleci-${CIRCLE_WORKFLOW_ID:0:7} \
+  #             --stack-name InitialStack \
+  #             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
+  #       # - revert-migrations:
+  #       #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  #       # - destroy-environment:
+  #       #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   notify:
     docker:
@@ -467,7 +467,8 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      - cloudfront-update:
-          requires: [smoke-test]
-      - cleanup:
-          requires: [cloudfront-update]
+      - cleanup
+      # - cloudfront-update:
+      #     requires: [smoke-test]
+      # - cleanup:
+      #     requires: [cloudfront-update]
