--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -182,8 +182,8 @@ jobs:
           root: ~/
           paths:
           - project/.circleci/ansible/inventory.txt
-      # - destroy-environment:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   configure-infrastructure:
     docker:
@@ -209,8 +209,8 @@ jobs:
             cat ~/project/.circleci/ansible/inventory.txt
             export ANSIBLE_HOST_KEY_CHECKING=False
             ansible-playbook -i ~/project/.circleci/ansible/inventory.txt ~/project/.circleci/ansible/configure-server.yml
-      # - destroy-environment:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   run-migrations:
     docker:
@@ -233,8 +233,8 @@ jobs:
               # If you are using kvdb.io, generate the bucket ID "FSEfNb8pmLiuvp867pkneM" in your local terminal first
               curl --insecure https://kvdb.io/FSEfNb8pmLiuvp867pkneM/migration_${CIRCLE_WORKFLOW_ID:0:7}  -d '1'
             fi
-      # - destroy-environment:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}     
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}     
 
   deploy-frontend:
     docker:
@@ -276,9 +276,9 @@ jobs:
             npm run build
             tar -czvf artifact-"${CIRCLE_WORKFLOW_ID:0:7}".tar.gz dist
             aws s3 cp dist s3://udapeople-${CIRCLE_WORKFLOW_ID:0:7} --recursive
-      # - revert-migrations
-      # - destroy-environment:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}    
+      - revert-migrations
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}    
                     
   deploy-backend:
         docker:
@@ -319,10 +319,10 @@ jobs:
                 echo "Contents  of the inventory.txt file is -------"
                 cat inventory.txt
                 ansible-playbook -i inventory.txt deploy-backend.yml
-          # - revert-migrations:
-          #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-          # - destroy-environment:
-          #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
+          - revert-migrations:
+              workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+          - destroy-environment:
+              workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
 
   smoke-test:
     docker:
@@ -364,35 +364,35 @@ jobs:
             else
               return 1
             fi
-      # - destroy-environment:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-      # - revert-migrations:
-      #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
+      - destroy-environment:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+      - revert-migrations:
+          workflow_id: ${CIRCLE_WORKFLOW_ID:0:7} 
 
-  # cloudfront-update:
-  #     docker:
-  #       - image: amazon/aws-cli
-  #     steps:
-  #       - checkout
-  #       - run:
-  #           name: clean old workflow
-  #           command: |
-  #             WorkflowID=$(aws --region us-east-1 cloudformation \
-  #             list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-  #             --no-paginate --output text)
-  #             curl https://kvdb.io/FSEfNb8pmLiuvp867pkneM/values/workflowid  -d "$WorkflowID"
-  #       - run:
-  #           name: Update cloudfront 
-  #           command: |
-  #             aws cloudformation deploy \
-  #             --template-file .circleci/files/cloudfront.yml \
-  #             --tags project=circleci-${CIRCLE_WORKFLOW_ID:0:7} \
-  #             --stack-name InitialStack \
-  #             --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
-  #       # - revert-migrations:
-  #       #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
-  #       # - destroy-environment:
-  #       #     workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+  cloudfront-update:
+      docker:
+        - image: amazon/aws-cli
+      steps:
+        - checkout
+        - run:
+            name: clean old workflow
+            command: |
+              WorkflowID=$(aws --region us-east-1 cloudformation \
+              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+              --no-paginate --output text)
+              curl https://kvdb.io/FSEfNb8pmLiuvp867pkneM/values/workflowid  -d "$WorkflowID"
+        - run:
+            name: Update cloudfront 
+            command: |
+              aws cloudformation deploy \
+              --template-file .circleci/files/cloudfront.yml \
+              --tags project=circleci-${CIRCLE_WORKFLOW_ID:0:7} \
+              --stack-name InitialStack \
+              --parameter-overrides WorkflowID="${CIRCLE_WORKFLOW_ID:0:7}"
+        - revert-migrations:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
+        - destroy-environment:
+            workflow_id: ${CIRCLE_WORKFLOW_ID:0:7}
 
   notify:
     docker:
@@ -467,7 +467,7 @@ workflows:
           requires: [run-migrations]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
-      # - cloudfront-update:
-      #     requires: [smoke-test]
-      - cleanup:
+      - cloudfront-update:
           requires: [smoke-test]
+      - cleanup:
+          requires: [cloudfront-update]
