--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,6 +297,7 @@ jobs:
           - run:
               name: Install dependencies
               command: |
+                apk add openssh-client
                 apk add --update tar gzip curl
                 pip install awscli
                 apk add --update ansible 
